# slimify

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  template.env
.github/: .gitignore
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
search/: search_index.json
src/slimify/: __init__.py
tests/: test_imports.py
